[workspace]
members = ["rust", "rust/derive", "rust/test_helpers"]
default-members = ["rust", "rust/derive", "rust/test_helpers"]
resolver = "2"

[workspace.package]
version = "1.0.2"
authors = ["Zoe Faltibà <zoefaltiba@gmail.com>"]
repository = "https://github.com/rgb-protocol/rgb-strict-encoding"
rust-version = "1.85.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "=4.8.1"
serde_crate = { package = "serde", version = "1", features = [
    "derive",
] }
