[package]
name = "rgb-strict-encoding-test"
version = { workspace = true }
description = "Helper functions for testing strict encodings"
keywords = ["strict-encoding", "test-helpers"]
categories = ["encoding", "parsing", "development-tools"]
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"
publish = false

[lib]
name = "strict_encoding_test"

[dependencies]
amplify = { workspace = true }
rgb-strict-encoding = { version = "1.0.2", path = ".." }
